--- a/api/composer.json
+++ b/api/composer.json
@@ -31,6 +31,7 @@
     },
     "require-dev": {
         "api-platform/schema-generator": "^5.0",
+        "codeception/codeception": "5.1.2",
         "symfony/browser-kit": "6.4.*",
         "symfony/css-selector": "6.4.*",
         "symfony/debug-bundle": "6.4.*",
@@ -38,7 +39,9 @@
         "symfony/phpunit-bridge": "6.4.*",
         "symfony/stopwatch": "6.4.*",
         "symfony/var-dumper": "6.4.*",
-        "symfony/web-profiler-bundle": "6.4.*"
+        "symfony/web-profiler-bundle": "6.4.*",
+        "codeception/module-phpbrowser": "*",
+        "codeception/module-asserts": "*"
     },
     "config": {
         "optimize-autoloader": true,
